[package]
name = "weibosdk-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
chrono = "0.4.41"
log = "0.4.27"
reqwest = { version = "0.12.5", features = ["json", "cookies", "gzip"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.9"
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
simple_logger = "5.0.0"
wiremock = "0.6.0"
