[package]
name = "weibosdk-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
chrono = "0.4"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
simple_logger = "5"
wiremock = "0.6"

[features]
test-mocks = []
